Details
-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.1, 6.9.0
-
-
b71794581 (dev), acbfeca2b (6.9), dae6848db (6.8)
Description
Painting simple radio button leads to crash in Windows11 style in 6.8.1 and higher. Same works with Qt6.5.8.
Attached example reproduces it. Just launch and experience the Crash.
Attachments
For Gerrit Dashboard: QTBUG-132906 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
619050,4 | QWindows11Style: Default PE_IndicatorRadioButton to selected/unselected | dev | qt/qtbase | Status: MERGED | +2 | 0 |
620079,2 | QWindows11Style: Default PE_IndicatorRadioButton to selected/unselected | 6.9 | qt/qtbase | Status: MERGED | +2 | 0 |
620243,2 | QWindows11Style: Default PE_IndicatorRadioButton to selected/unselected | 6.8 | qt/qtbase | Status: MERGED | +2 | 0 |